--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section id="food_network" class="flex">
         <div class="food_network_content">
-            <h1>Food Network Website</h1>
+            <h1><span class="font_color">Food Network</span> Website</h1>
             <p> Food Network is an American basic cable channel owned by Television Food Network, G.P., a joint venture
                 and general partnership between Discovery, Inc. (which holds a 69% ownership stake of the network) and
                 Nexstar Media Group (which owns the remaining 31%). Despite this ownership structure, the channel is
