--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 Nexstar Media Group (which owns the remaining 31%). Despite this ownership structure, the channel is
                 managed and operated as a division of Discovery Networks U.S. The channel airs both special and regular
                 episodic programs about food and cooking. </p>
-            <a target="_blank" href="#">Order Food</a>
+            <a class="link_style" target="_blank" href="#">Order Food</a>
         </div>
         <div class="food_network_img">
             <img src="images/female/Group 8425.png" alt="Group 8425">
