--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
             <img src="images/female/Group 8425.png" alt="Group 8425">
         </div>
     </section>
+    <section id="about_me-area" class="flex">
+        <div class="about_me_img">
+            <img src="images/female/6667872_preview-removebg-preview.png" alt="">
+        </div>
+        <div class="about_me_content">
+            <h2>About Us</h2>
+            <p>The best customer service, that'll make you ask for more... Why Food Network? Food Network is starting
+                its journey with the positive attitude to serve and deliver healthy and fresh food to its customer at an
+                “easy on the wallet” price. </p>
+        </div>
+    </section>
 </body>
 
 </html>
