--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="images/female/Group 8425.png" alt="Group 8425">
         </div>
     </section>
-    <section id="about_me-area" class="flex">
+    <section id="about_us_area" class="flex">
         <div class="about_me_img">
             <img src="images/female/6667872_preview-removebg-preview.png" alt="">
         </div>
@@ -36,6 +36,16 @@
             <p>The best customer service, that'll make you ask for more... Why Food Network? Food Network is starting
                 its journey with the positive attitude to serve and deliver healthy and fresh food to its customer at an
                 “easy on the wallet” price. </p>
+            <a class="link_style" target="_blank" href="https://www.linkedin.com/in/jibonghoshbd/">Contact Me</a>
+        </div>
+    </section>
+    <section id="recipies">
+        <div class="recipes_content">
+            <h2>My Recipies</h2>
+            <p><strong>Food Network</strong> Magazine takes you behind the scenes with your favorite <strong>Food
+                    Network</strong> chefs,
+                gives you
+                entertaining ideas for holidays and occasions and brings ...</p>
         </div>
     </section>
 </body>
