--- a/index.html
+++ b/index.html
@@ -47,6 +47,39 @@
                 gives you
                 entertaining ideas for holidays and occasions and brings ...</p>
         </div>
+        <div class="my_recipes_wrapper">
+            <div class="recipes_box">
+                <div class="recipes_img">
+                    <img src="images/food/burgers.jpg" alt="burgers">
+                </div>
+                <div class="recipes_details">
+                    <h3>Burgers</h3>
+                    <p>Whether you’re craving a classic beef burger, a veggie patty or even a turducken version, Food
+                        Network has you covered with top picks from across the country.</p>
+                </div>
+            </div>
+            <div class="recipes_box">
+                <div class="recipes_img">
+                    <img src="images/food/burgers.jpg" alt="burgers">
+                </div>
+                <div class="recipes_details">
+                    <h3>Burgers</h3>
+                    <p>Whether you’re craving a classic beef burger, a veggie patty or even a turducken version, Food
+                        Network has you covered with top picks from across the country.</p>
+                </div>
+            </div>
+            <div class="recipes_box">
+                <div class="recipes_img">
+                    <img src="images/food/burgers.jpg" alt="burgers">
+                </div>
+                <div class="recipes_details">
+                    <h3>Burgers</h3>
+                    <p>Whether you’re craving a classic beef burger, a veggie patty or even a turducken version, Food
+                        Network has you covered with top picks from across the country.</p>
+                </div>
+            </div>
+
+        </div>
     </section>
 </body>
 
