recipes text editing

--- a/index.html
+++ b/index.html
@@ -60,22 +60,26 @@
             </div>
             <div class="recipes_box">
                 <div class="recipes_img">
-                    <img src="images/food/burgers.jpg" alt="burgers">
+                    <img src="images/food/pizza_fresca.jpg" alt="pizza_fresca">
                 </div>
                 <div class="recipes_details">
-                    <h3>Burgers</h3>
-                    <p>Whether you’re craving a classic beef burger, a veggie patty or even a turducken version, Food
-                        Network has you covered with top picks from across the country.</p>
+                    <h3>Pizza</h3>
+                    <p>Be it any occasion, we all love to eat pizza at home. But, what goes behind making this delicious
+                        dish? Well, learn all about making a delicious pizza at home with this easy recipe that will
+                        take you through detailed steps some tips that will guide you in preparing a Pizza at home.</p>
                 </div>
             </div>
             <div class="recipes_box">
                 <div class="recipes_img">
-                    <img src="images/food/burgers.jpg" alt="burgers">
+                    <img src="images/food/Shrimp_scampi.jpeg" alt="Shrimp_scampi">
                 </div>
                 <div class="recipes_details">
-                    <h3>Burgers</h3>
-                    <p>Whether you’re craving a classic beef burger, a veggie patty or even a turducken version, Food
-                        Network has you covered with top picks from across the country.</p>
+                    <h3>Shrimp_Scampi</h3>
+                    <p>America can’t seem to get enough of shrimp scampi: It’s one of the 10 most-searched recipes on
+                        FoodNetwork.com during the summer (more popular than burgers!) and #shrimpscampi has more than
+                        134,000 posts on Instagram. What’s the excitement all about? Do we love shrimp scampi because
+                        it’s simple but seemingly fancy? Or because it’s done in 30 minutes? Or because we just can’t
+                        resist a buttery wine sauce? All of the above! ....</p>
                 </div>
             </div>
 
