--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
 
         </div>
     </section>
+    <section id="social_media">
+        <div class="social_wrapper">
+            <div class="social_box">
+                <h3>700k</h3>
+                <small>YouTube Subscribers</small>
+            </div>
+            <div class="social_box">
+                <h3>700k</h3>
+                <small>YouTube Subscribers</small>
+            </div>
+            <div class="social_box">
+                <h3>700k</h3>
+                <small>YouTube Subscribers</small>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
