social media styling

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                 <small>YouTube Subscribers</small>
             </div>
             <div class="social_box">
-                <h3>700k</h3>
-                <small>YouTube Subscribers</small>
+                <h3>2.4M</h3>
+                <small>Instagram Followers</small>
             </div>
             <div class="social_box">
-                <h3>700k</h3>
-                <small>YouTube Subscribers</small>
+                <h3>1000k</h3>
+                <small>Dribble Shot Likes</small>
             </div>
         </div>
     </section>
