--- a/index.html
+++ b/index.html
@@ -85,6 +85,41 @@
 
         </div>
     </section>
+    <section id="customer_reviews">
+        <h1>Customer Reviews</h1>
+        <div class="customer_wrapper">
+            <div class="single_customer">
+                <div class="single_customer-img">
+                    <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+                        alt="">
+                </div>
+                <div class="customer_comment">
+                    <p>This network craves me so much with lots of food. This pandemic, it helps me to cope up with my
+                        cravings virtually. Thanks to this network! </p>
+                </div>
+            </div>
+            <div class="single_customer">
+                <div class="single_customer-img">
+                    <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+                        alt="">
+                </div>
+                <div class="customer_comment">
+                    <p>This network craves me so much with lots of food. This pandemic, it helps me to cope up with my
+                        cravings virtually. Thanks to this network! </p>
+                </div>
+            </div>
+            <div class="single_customer">
+                <div class="single_customer-img">
+                    <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+                        alt="">
+                </div>
+                <div class="customer_comment">
+                    <p>This network craves me so much with lots of food. This pandemic, it helps me to cope up with my
+                        cravings virtually. Thanks to this network! </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="social_media">
         <div class="social_wrapper">
             <div class="social_box">
