customer revews style

--- a/index.html
+++ b/index.html
@@ -90,30 +90,32 @@
         <div class="customer_wrapper">
             <div class="single_customer">
                 <div class="single_customer-img">
-                    <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+                    <img src="images/male/attractive-man-eating-hamburger-he-260nw-310832510-removebg-preview.png"
                         alt="">
                 </div>
                 <div class="customer_comment">
+                    <h3>Alan Kunde</h3>
                     <p>This network craves me so much with lots of food. This pandemic, it helps me to cope up with my
                         cravings virtually. Thanks to this network! </p>
                 </div>
             </div>
             <div class="single_customer">
                 <div class="single_customer-img">
-                    <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
+                    <img src="images/male/guy-eats-hot-dog-which-himself-has-prepared-street-food-young-man-blue-shirt-eats-hot-dog-white-background-100449486-removebg-preview.png"
                         alt="">
                 </div>
                 <div class="customer_comment">
+                    <h3>Lionel Schowalter</h3>
                     <p>This network craves me so much with lots of food. This pandemic, it helps me to cope up with my
                         cravings virtually. Thanks to this network! </p>
                 </div>
             </div>
             <div class="single_customer">
                 <div class="single_customer-img">
-                    <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png"
-                        alt="">
+                    <img src="images/male/young-guy-holding-fresh-burger_79782-176-removebg-preview.png" alt="">
                 </div>
                 <div class="customer_comment">
+                    <h3>Jaiden Reynolds</h3>
                     <p>This network craves me so much with lots of food. This pandemic, it helps me to cope up with my
                         cravings virtually. Thanks to this network! </p>
                 </div>
