footer area html

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
             </div>
         </div>
     </section>
+    <footer id="footer_area">
+        <h1><span class="font_color">Foot</span> network</h1>
+        <p>Eat healthy to love healthy. love healthy to love happy</p>
+    </footer>
 </body>
 
 </html>
